--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,3 +1,9 @@
+:root {
+    --primary: #0069b3;
+    --secondaryOrange: #de5d0c;
+    --secondaryBlue: #024a7b;
+}
+
 .footer-hdm a {
     text-decoration: none;
 }
@@ -40,22 +46,36 @@
 }
 
 .footer-left-hdm {
-    width: 35vw;
+    width: 30vw;
 }
 
 .footer-right-hdm {
-    width: 65vw;
-    z-index: 2;
-}
-
-.footer-right-hdm {
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     z-index: 2;
+    align-items: center;
+    justify-content: center;
 }
 
 .group-list-hdm {
     width: 33%;
     color: white;
+}
+
+.group-list-hdm img {
+    width: 20px;
+    background-color: white;
+    border-radius: 9999px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    box-sizing: border-box;
+    margin-right: 12px;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
 }
 
 .group-list-hdm h3 {
@@ -65,6 +85,8 @@
 .group-list-hdm li {
     list-style: none;
     margin: 20px 0;
+    display: flex;
+    align-items: center;
     color: rgb(219, 219, 219);
 }
 
@@ -80,7 +102,7 @@
     width: 100%;
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 0px;
     z-index: 1;
 }
 
