--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
+:root {
+    --primary: #0069b3;
+    --secondaryOrange: #de5d0c;
+    --secondaryBlue: #024a7b;
+}
+
 * {
     margin: 0;
     overflow-x: hidden;
@@ -11,7 +17,13 @@
 .container-navbar5-mz5 {
     padding: 14px 100px;
     display: flex;
-    position: relative;
+    width: 100vw;
+    position: fixed;
+    box-shadow: 10px 9px 52px 0px rgba(107, 107, 107, 0.342);
+    left: 0;
+    z-index: 444444444;
+    top: 0;
+    background-color: white;
     justify-content: space-between;
     overflow: hidden;
     align-items: center;
@@ -26,6 +38,15 @@
 .logo-navbar5-mz5 img {
     width: 80px;
     position: absolute;
+}
+
+.content1-navbar5-mz5 li.active a {
+    color: var(--primary);
+    background-color: white;
+    box-shadow: none;
+    text-shadow: none;
+    border: none;
+    outline: none;
 }
 
 .logo-navbar5-mz5 h1 {
@@ -66,6 +87,7 @@
 
 .content2-navbar5-mz5 li {
     cursor: pointer;
+    margin-left: 30px;
 }
 
 .dropdown-mz5 {
