--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -335,7 +335,8 @@ html {
     font-weight: 400;
     font-size: 16px;
     line-height: 25px;
-    color: #a7abb6;
+    margin-bottom: 60px;
+    color: black;
     text-align: center;
 }
 
@@ -588,6 +589,7 @@ html {
 .container-mou {
     text-align: center;
     padding: 40px 0px;
+    margin-bottom: 50px;
     overflow-x: hidden;
 }
 
@@ -1329,7 +1331,6 @@ html {
 .container-exp {
     width: 100vw;
     overflow: hidden;
-    position: relative;
     height: max-content;
     margin: 50px 0 30px 0;
     padding: 30px 60px;
@@ -1370,11 +1371,11 @@ html {
 }
 
 .top-right-exp div:nth-child(2) {
-    background-color: var(--primary);
+    background-color: #5d50c6;
 }
 
 .subtitle-exp {
-    color: var(--primary);
+    color: #f85e9f;
     font-size: 20px;
 }
 
@@ -1390,12 +1391,12 @@ html {
 }
 
 .wrap-bottom-exp {
-    width: 92vw;
+    width: max-content;
     padding-bottom: 50px;
     display: flex;
     transition: 1s;
-    flex-wrap: wrap;
     overflow: auto;
+    padding-right: 70px;
     justify-content: space-between;
 }
 
@@ -1404,10 +1405,9 @@ html {
 }
 
 .card-exp {
-    width: 23%;
-    margin-bottom: 60px;
-    height: max-content;
-    margin-right: 20px;
+    width: 320px;
+    height: 320px;
+    margin-right: 60px;
     border-radius: 20px;
     overflow: hidden;
     background-color: white;
@@ -1418,26 +1418,20 @@ html {
         0 8px 33.4px rgba(90, 90, 90, 0.086), 0 6px 80px rgba(83, 83, 83, 0.12);
 }
 
-.card-exp a {
-    text-decoration: none;
-    color: black;
-}
-
 .card-top-exp {
     width: 100%;
-    height: 200px;
+    height: 55%;
     overflow: hidden;
-    background-size: cover;
+    background-size: contain;
 }
 
 .card-top-exp img {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .card-bottom-exp {
     padding: 20px;
-    background-color: rgb(250, 250, 250);
 }
 
 .title-bottom-exp {
@@ -1449,11 +1443,11 @@ html {
 
 .title-bottom-exp h4 {
     width: 70%;
-    font-size: 22px;
+    font-size: 15px;
 }
 
 .title-bottom-exp p {
-    color: var(--secondaryOrange);
+    color: #f85e9f;
     font-weight: bold;
 }
 
@@ -1464,7 +1458,10 @@ html {
 }
 
 .card-bottom-exp small {
-    color: rgb(119, 119, 119);
+    background-color: var(--secondaryOrange);
+    color: white;
+    border-radius: 999px;
+    padding: 5px 20px;
 }
 
 .rating-exp img {
@@ -1481,10 +1478,6 @@ html {
 .card-exp:active {
     transform: scale(0.97);
     transition: 0.3s;
-}
-
-.left-exp {
-    border: 1px solid rgb(196, 196, 196);
 }
 
 @media screen and (max-width: 750px) {
@@ -1675,4 +1668,168 @@ section4-btn-section4mz4:hover {
         justify-content: center;
         align-items: center;
     }
+}
+
+.section4-mz2 {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 140px;
+    margin-bottom: 150px;
+}
+
+.section4-mz2-title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    color: #141c24;
+    text-align: center;
+}
+
+.section4-mz2-paragh {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+    color: #344051;
+    margin-top: 10px;
+}
+
+.accordion-mz2 {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.accordion-mz2:first-of-type {
+    margin-top: 50px;
+}
+
+.accordion-mz2 span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+    color: #141c24;
+}
+
+.active,
+.accordion-mz2:hover {
+    background-color: #ccc;
+}
+
+.panel-mz2 {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
+
+.section4-bottom {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section4-bottom h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    color: #002966;
+}
+
+.section4-bottom p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #002966;
+    margin-top: 10px;
+}
+
+.section4-bottom button img {
+    margin-right: 12px;
+}
+
+.section4-bottom button {
+    width: max-content;
+    height: 40px;
+    background: #1a75ff;
+    border-radius: 8px;
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 1007px) {
+    .section4-mz2 {
+        width: 92%;
+    }
+
+    .section4-bottom button {
+        margin-top: 50px;
+    }
+}
+
+.wa-feature {
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    border-radius: 9999px;
+    padding: 4px;
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    border: 1px solid var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999999;
+    cursor: pointer;
+    transition: 0.2s;
+    box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        6.7px 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        12.5px 12.5px 10px rgba(0, 0, 0, 0.06),
+        22.3px 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        41.8px 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        100px 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.wa-feature:hover {
+    filter: brightness(90%);
+    transition: 0.2s;
+}
+
+.wa-feature:active {
+    transition: 0.2s;
+    transform: scale(0.98);
+}
+
+.wa-feature img {
+    width: 70%;
 }
