--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1162,8 +1162,9 @@ html {
 }
 
 .panel-mz2 {
-    padding: 0 18px;
+    padding: 30px 18px;
     display: none;
+    height: max-content;
     background-color: white;
     overflow: hidden;
 }
@@ -1272,6 +1273,28 @@ html {
 }
 
 .btn-form:active {
+    transition: 0.2s;
+    transform: scale(0.98);
+}
+
+.btn-product {
+    position: relative;
+    border: none;
+    outline: none;
+    padding: 16px 24px;
+    margin-top: 20px;
+    border-radius: 6px;
+    color: white;
+    cursor: pointer;
+    background-color: var(--primary);
+}
+
+.btn-product:hover {
+    transition: 0.2s;
+    filter: brightness(90%);
+}
+
+.btn-product:active {
     transition: 0.2s;
     transform: scale(0.98);
 }
@@ -1533,8 +1556,8 @@ html {
 }
 
 .container-section4-section4mz4 {
-    padding: 60px 70px 90px 70px;
-    background-color: #0e0e0e;
+    padding: 80px 70px 90px 70px;
+    background-color: var(--primary);
     display: flex;
     flex-direction: column;
     margin-top: 50px;
@@ -1561,15 +1584,22 @@ html {
 .section4-btn-section4mz4 {
     width: 215px;
     height: 58px;
-    background: #0052ff;
+    background: white;
     border-radius: 8px;
     font-weight: 500;
     font-size: 14px;
     line-height: 22px;
     text-align: center;
-    color: #ffffff;
+    color: #202020;
+    cursor: pointer;
     outline: none;
     border: none;
+    transition: 0.2s;
+}
+
+.section4-btn-section4mz4:hover {
+    transition: 0.2s;
+    filter: brightness(88%);
 }
 
 section4-btn-section4mz4:hover {
@@ -1598,7 +1628,7 @@ section4-btn-section4mz4:hover {
 }
 
 .galrry-item-section4mz4 img {
-    width: 100%;
+    width: auto;
     height: 100%;
 }
 
@@ -1726,13 +1756,13 @@ section4-btn-section4mz4:hover {
     color: #141c24;
 }
 
-.active,
+.accordion-mz2.active,
 .accordion-mz2:hover {
     background-color: #ccc;
 }
 
 .panel-mz2 {
-    padding: 0 18px;
+    padding: 20px 18px;
     display: none;
     background-color: white;
     overflow: hidden;
