--- a/assets/styles/products.css
+++ b/assets/styles/products.css
@@ -356,3 +356,58 @@
     color: rgb(115, 117, 255);
     text-decoration: none;
 }
+
+@media screen and (max-width: 750px) {
+    .info-detail {
+        left: 12px;
+        font-size: 8px;
+    }
+
+    .child-detail-product {
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+    }
+
+    .wrapper-detail-product {
+        margin-bottom: 30px;
+    }
+
+    .child-detail-product ul {
+        display: none;
+    }
+
+    .child-detail-product-left {
+        border: none;
+        width: 100%;
+    }
+
+    .child-detail-product-right {
+        width: 100%;
+        padding: 0;
+    }
+
+    .section-tabs {
+        padding: 0 20px;
+        margin-bottom: 20px;
+        margin-top: 0px;
+    }
+
+    .tab-button {
+        font-size: 10px;
+    }
+
+    .tab-content {
+        padding: 20px 10px;
+    }
+
+    .tab-content h2 {
+        font-size: 26px;
+        margin-top: 10px;
+        margin-bottom: 14px;
+    }
+    
+    .tab-content p {
+        width: 98%;
+    }
+}
