--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -37,7 +37,14 @@
 
 .logo-navbar5-mz5 img {
     width: 80px;
+    cursor: pointer;
     position: absolute;
+    transition: 0.2s;
+}
+
+.logo-navbar5-mz5 img:hover {
+    transition: 0.2s;
+    transform: scale(0.97);
 }
 
 .content1-navbar5-mz5 li.active a {
