--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -733,20 +733,10 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 40px 30px 120px 30px;
     margin-bottom: 70px;
     margin-top: 80px;
     background-color: var(--primary);
-    clip-path: polygon(
-        39% 7%,
-        70% 0%,
-        100% 4%,
-        100% 90%,
-        68% 100%,
-        35% 97%,
-        0 98%,
-        0 0
-    );
 }
 
 .section7-mz2 h1 {
@@ -756,7 +746,7 @@ html {
     font-size: 36px;
     width: max-content;
     height: 60px;
-    margin-top: 140px;
+    margin-top: 60px;
     line-height: 44px;
     color: #ffffff;
     text-align: center;
@@ -813,20 +803,14 @@ html {
     }
 
     .section7-mz2 {
-        padding: 30px 50px;
-    }
-
-    .section7-mz2 {
         height: max-content;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0px 30px;
         margin-bottom: 70px;
         margin-top: 80px;
         background-color: var(--primary);
-        clip-path: none;
     }
 
     .section7-mz2 h1 {
@@ -844,7 +828,7 @@ html {
     }
 
     .section7-mz2 {
-        padding: 30px 50px;
+        padding: 30px 50px 70px 50px;
     }
 }
 
@@ -1954,4 +1938,46 @@ section4-btn-section4mz4:hover {
 
 .wa-feature img {
     width: 70%;
+}
+
+.slider-container {
+    width: max-content;
+    overflow: hidden;
+    margin-top: 130px;
+}
+
+.slider {
+    display: flex;
+    animation: slide 55s linear infinite;
+}
+
+.slider img {
+    width: auto;
+    height: 100px;
+    margin: 0 50px;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(0%);
+    }
+    50% {
+        transform: translateX(-50%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 1007px) {
+    .slider img {
+        width: auto;
+        height: 100px;
+        margin: 0 20px;
+    }
+
+    .slider {
+        display: flex;
+        animation: slide 45s linear infinite;
+    }
 }
