--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -34,10 +34,11 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-left: -30px;
 }
 
 .logo-navbar5-mz5 img {
-    width: 120px;
+    width: 150px;
     cursor: pointer;
     position: absolute;
     transition: 0.2s;
@@ -147,8 +148,8 @@
     }
 
     .logo-navbar5-mz5 img {
-        width: 120px;
-        height: 120px;
+        width: 140px;
+        height: 140px;
         position: absolute;
         left: 30px;
     }
