--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #0069b3;
-    --secondaryOrange: #de5d0c;
+    --secondaryOrange: #DE5D0C;
     --secondaryBlue: #024a7b;
 }
 
