--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #0069b3;
-    --secondaryOrange: #de5d0c;
+    --secondaryOrange: #DE5D0C;
     --secondaryBlue: #024a7b;
 }
 
@@ -10,6 +10,21 @@ html {
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+#text-animation {
+    position: relative;
+}
+
+#text-animation::before {
+    position: absolute;
+    left: 0;
+    content: '';
+    display: block;
+    background-color: white;
+    width: 100%;
+    height: 3px;
+    bottom: -2px;
 }
 
 .parallax-container {
@@ -261,9 +276,8 @@ html {
     line-height: 22px;
     border-radius: 999px;
     padding: 4px 20px;
-    color: #ffffff;
+    color: var(--secondaryOrange);
     text-align: center;
-    background-color: var(--secondaryBlue);
 }
 
 @media only screen and (min-width: 320px) and (max-width: 576px) {
