--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -16,17 +16,6 @@ html {
     position: relative;
 }
 
-#text-animation::before {
-    position: absolute;
-    left: 0;
-    content: "";
-    display: block;
-    background-color: white;
-    width: 100%;
-    height: 3px;
-    bottom: -2px;
-}
-
 .parallax-container {
     position: relative;
     overflow: hidden;
@@ -682,7 +671,14 @@ html {
     margin: 10px;
     transition: 0.2s;
     background-color: white;
-    border: 1px solid rgb(211, 211, 211);
+    box-shadow: 2px 2px 1.6px rgba(0, 0, 0, 0.002),
+        4.5px 4.5px 3.6px rgba(0, 0, 0, 0.003),
+        7.9px 7.9px 6.3px rgba(0, 0, 0, 0.004),
+        12.5px 12.5px 10px rgba(0, 0, 0, 0.005),
+        19.3px 19.3px 15.5px rgba(0, 0, 0, 0.006),
+        30.1px 30.1px 24.1px rgba(0, 0, 0, 0.007),
+        50px 50px 40px rgba(0, 0, 0, 0.008),
+        100px 100px 80px rgba(0, 0, 0, 0.01);
     overflow: hidden;
     cursor: pointer;
 }
@@ -1459,7 +1455,7 @@ html {
 }
 
 .subtitle-exp {
-    color: #f85e9f;
+    color: var(--secondaryOrange);
     font-size: 20px;
 }
 
@@ -1531,7 +1527,7 @@ html {
 }
 
 .title-bottom-exp p {
-    color: #f85e9f;
+    color: var(--secondaryOrange);
     font-weight: bold;
 }
 
@@ -2008,7 +2004,7 @@ section4-btn-section4mz4:hover {
     font-weight: bold;
     margin: 0 20px;
     font-size: 18px;
-    color: var(--secondaryOrange)
+    color: var(--secondaryOrange);
 }
 
 .legend div {
