projectCV. Mandiri Technology Sejahtera

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -566,7 +566,7 @@ html {
     }
 
     .card-section5-left-mz1 {
-        width: 320px;
+        width: 86vw;
         height: 252px;
         border-radius: 20px;
         -webkit-border-radius: 20px;
