--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -171,7 +171,7 @@
 
     .logo-navbar5-mz5 img {
         width: 90px;
-        height: 90px;
+        height: auto;
         position: absolute;
         left: 30px;
     }
@@ -243,7 +243,7 @@
 @media screen and (min-width: 14in) {
     .logo-navbar5-mz5 img {
         width: 200px;
-        height: 200px;
+        /* height: 200px; */
         cursor: pointer;
         position: absolute;
         transition: 0.2s;
