--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,7 +125,7 @@ html {
 .btn-hero-bmw {
     background-color: var(--primary);
     color: white;
-    margin-left: auto;
+    margin-left: auto;g
     margin-right: auto;
     display: flex;
     align-items: center;
