--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,7 +125,7 @@ html {
 .btn-hero-bmw {
     background-color: var(--primary);
     color: white;
-    margin-left: auto;g
+    margin-left: auto;
     margin-right: auto;
     display: flex;
     align-items: center;
@@ -185,7 +185,7 @@ html {
     }
 
     .btn-hero-bmw {
-        background-color: #ff214f;
+        background-color: var(--primary);
         color: white;
         display: flex;
         align-items: center;
