--- a/assets/styles/B-C.css
+++ b/assets/styles/B-C.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #0069b3;
-    --secondaryOrange: #DE5D0C;
+    --secondaryOrange: #de5d0c;
     --secondaryBlue: #024a7b;
 }
 
@@ -87,11 +87,7 @@
     border-radius: 20px;
     overflow: hidden;
     background-color: white;
-    box-shadow: 0 2.8px 2.2px rgba(82, 82, 82, 0.034),
-        0 6.7px 5.3px rgba(136, 136, 136, 0.048),
-        0 2.5px 10px rgba(71, 71, 71, 0.06),
-        0 8px 17.9px rgba(65, 65, 65, 0.072),
-        0 8px 33.4px rgba(90, 90, 90, 0.086), 0 6px 80px rgba(83, 83, 83, 0.12);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
 .card-exp a {
