--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -168,8 +168,8 @@ html {
     .title-hero-bmw {
         margin-left: auto;
         margin-right: auto;
-        font-size: 34px;
-        width: 90%;
+        font-size: 28px;
+        width: 94%;
         color: white;
         line-height: 1.4em;
         margin-bottom: 14px;
@@ -205,6 +205,8 @@ html {
     .container-hero-bmw img {
         filter: brightness(80%);
         width: auto;
+        height: 100%;
+        margin-left: -300px;
     }
 }
 
